<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organizer_events_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/organizerToolbar"
        layout="@layout/organizer_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/organizer_events_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/my_organized_events_title"
        android:gravity="center"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@id/organizerToolbar" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:divider="@color/organizer_blue"
        android:showDividers="middle"
        android:stretchColumns="*"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/organizer_events_title">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:padding="16dp"
                android:text="Event 1"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="Jan 1"
                android:textColor="#000000" />

            <Button
                android:id="@+id/event_view_button"
                android:layout_width='0dp'
                android:layout_weight="0.75"
                android:background="@drawable/event_view_button"
                android:text="View"
                android:textColor="@color/organizer_blue">

            </Button>
        </TableRow>

    </TableLayout>


    <!-- TEMPORARY ADD BUTTON -->
    <Button
        android:id="@+id/add_button_bottom"
        style="@style/landing_button_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/organizer_button"
        android:text="ADD"
        app:layout_constraintBottom_toTopOf="@id/back_button_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"/>

    <!-- BACK BUTTON -->
    <Button
        android:id="@+id/back_button_bottom"
        style="@style/landing_button_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/organizer_button"
        android:text="@string/back_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/organizer_events_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organizer_events_title" />

</androidx.constraintlayout.widget.ConstraintLayout>