...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar"
        app:layout_constraintVertical_bias="0.368" />

    <Button
        android:id="@+id/organizer_events_button"
        style="@style/landing_button_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/landing_button"
        android:backgroundTint="@color/organizer_blue"
        android:text="@string/organizer_events_button_text"
...
