<?xml version="1.0" encoding="utf-8"?>
<!-- Made by Simon
     Edited by Soaiba -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/topToolbar"
        layout="@layout/user_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Circular Image -->
            <!-- reference: https://stackoverflow.com/questions/22105775/imageview-in-circular-through-xml -->
            <androidx.cardview.widget.CardView
                android:id="@+id/user_profile_image"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="75dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/topToolbar">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="250dp">

                    <!-- User pfp -->
                    <ImageView
                        android:id="@+id/user_profile_image_view"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/profile_picture" />
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/delete_profile_pic_button"
                style="@style/landing_button_text"
                android:visibility="gone"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/delete_button"
                android:text="@string/delete_image"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent" />

            <!-- Name Label -->

            <TextView
                android:id="@+id/user_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Name:"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_image" />

            <!-- Name Field -->
            <EditText
                android:id="@+id/user_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:hint="Name"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/user_email"/>

            <!-- Email Label -->
            <TextView
                android:id="@+id/user_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Email:"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_image" />

            <!-- Email Field -->
            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:hint="Email"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/user_name_label"/>

            <!-- Phone Label -->
            <TextView
                android:id="@+id/user_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Phone:"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_image" />

            <!-- Phone Field -->
            <EditText
                android:id="@+id/user_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:hint="Phone Number"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/user_name_field"/>

            <!-- Notification Check box -->
            <CheckBox
                android:id="@+id/user_notifications_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Receive Notifications from Organizers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/user_phone_number" />

            <View
                android:id="@+id/profile_divider"
                android:layout_width="350dp"
                android:layout_height="3dp"
                android:layout_marginTop="35dp"
                android:background="@color/user_orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/user_notifications_checkbox" />

            <androidx.cardview.widget.CardView
                android:id="@+id/facility_profile_image"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="35dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/topToolbar">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="250dp">

                    <!-- Facility Image -->
                    <ImageView
                        android:id="@+id/facility_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/edit_icon"
                        app:layout_constraintTop_toBottomOf="@+id/facility_address_field" />
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>
            <!-- Facility Name Label -->
            <TextView
                android:id="@+id/facility_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:text="Facility Name:"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_divider"/>

            <!-- Facility Name Field -->
            <EditText
                android:id="@+id/facility_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:hint="Name"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/facility_name_label"/>

            <!--Facility address label-->
            <TextView
                android:id="@+id/facility_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:text="Facility Address:"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_divider"/>

            <!-- Facility Adress Field -->
            <EditText
                android:id="@+id/facility_address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="25dp"
                android:padding="12dp"
                android:hint="Address"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/facility_name_field"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="16dp">

                <!-- Back Button -->
                <Button
                    android:id="@+id/back_button_bottom"
                    style="@style/landing_button_text"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/landing_button"
                    android:text="@string/back_button_text" />

                <!-- Save Changes Button -->
                <Button
                    android:id="@+id/save_changes_button"
                    style="@style/landing_button_text"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/landing_button"
                    android:text="Save Changes" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>