<?xml version="1.0" encoding="utf-8"?>
<!-- Edited by Soaiba -->

<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/topToolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="#FB9365"
    android:elevation="4dp"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <!-- Notification Bell -->
    <ImageButton
        android:id="@+id/bell"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:contentDescription="@string/bell_icon_description"
        android:background="@drawable/bell_icon" />

    <!-- App Name -->
    <TextView
        android:id="@+id/app_name_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name_text"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Profile Button -->
    <ImageButton
        android:id="@+id/profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:contentDescription="@string/person_icon_description"
        android:background="@drawable/person_icon" />
</androidx.appcompat.widget.Toolbar>
